objects/LLC_BI__LLC_LoanDocument__c.object
<CustomObject>
    <fields>
        <fullName>kanukanu__c</fullName>
        <label>kanukanu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>k1</fullName>
                </value>
                <value>
                    <fullName>k2</fullName>
                </value>
                <value>
                    <fullName>k3</fullName>
                </value>
                <value>
                    <fullName>k4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nCinoNewField__c</fullName>
        <label>nCinoNewField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Available__c</fullName>
        <description>The system automatically populates this checkbox to indicate that the form is available for data recognition.</description>
        <formula>AND(NOT(ISPICKVAL(ncinoocr__OCR_Document_Type__c, &quot;N/A&quot;)), NOT(ISBLANK(TEXT(ncinoocr__OCR_Document_Type__c)))) &amp;&amp; VALUE(NDOC__year__c) &gt; 2014 &amp;&amp; VALUE(NDOC__year__c) &lt; YEAR(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Data Recognition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Document_Type__c</fullName>
        <description>Lists the forms for which Data Recognition functionality is currently available. Will default to N/A. Field is not required.</description>
        <label>Data Recognition Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>1065</fullName>
                </value>
                <value>
                    <fullName>1120</fullName>
                </value>
                <value>
                    <fullName>1120S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sk_picklist__c</fullName>
        <label>sk picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>Dep</fullName>
                </value>
                <value>
                    <fullName>nCino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LLC_LoanDocument</label>
    <nameField>
        <label>LLC_LoanDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLC_LoanDocument</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>